--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.4"
   },
   "description": "<h1 align=\"center\">   Vite Template React </h1>",
